--- a/ExpenseTracker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTracker/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.ExpenseTracker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ShowExpenseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AddExpensesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddBalanceActivity"
             android:exported="false" />
         <activity
