added recycler view, monthly credit and debit using APIs

--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -36,8 +36,10 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.ExpenseTacker.NoActionBar" />
+            android:exported="true"
+            android:theme="@style/Theme.ExpenseTacker.NoActionBar" >
+
+        </activity>
     </application>
 
 </manifest>
