--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -37,9 +37,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ExpenseTacker.NoActionBar" >
-
-        </activity>
+            android:theme="@style/Theme.ExpenseTacker.NoActionBar"/>
     </application>
 
 </manifest>
