--- a/Expense Tracker API/src/main/resources/application.properties
+++ b/Expense Tracker API/src/main/resources/application.properties
@@ -1,10 +1,32 @@
+#spring.application.name=My_Expense_Tracker
+#
+##configuration file for mysql
+#
+#server.port=9090
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/myExpenseAccount
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.application.name=My_Expense_Tracker
+server.port=8080
 
-#configuration file for mysql
-
-server.port=9090
-spring.jpa.hibernate.ddl-auto=update
+# Datasource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/myExpenseAccount
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# JPA and Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Multipart file upload settings
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Custom properties
+project.profile_img=profile_imgs/
+base.url=http://localhost:8080
