--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ExpenseTacker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.AddTransactionActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddExpensesActivity"
             android:exported="false" />
         <activity
@@ -37,7 +40,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ExpenseTacker.NoActionBar"/>
+            android:theme="@style/Theme.ExpenseTacker.NoActionBar" />
     </application>
 
 </manifest>
