--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ExpenseTacker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ShowExpensesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddTransactionActivity"
             android:exported="false" />
         <activity
