--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -44,6 +48,17 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ExpenseTacker.NoActionBar" />
+
+        <receiver android:name=".utils.NotificationReceiver" />
+        <receiver
+            android:name=".utils.BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
