--- a/Expense Tracker API/src/main/resources/application.properties
+++ b/Expense Tracker API/src/main/resources/application.properties
@@ -22,6 +22,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
 
 # Multipart file upload settings
 spring.servlet.multipart.max-file-size=10MB
