--- a/ExpenseTacker/app/src/main/AndroidManifest.xml
+++ b/ExpenseTacker/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ExpenseTacker.NoActionBar" />
+        <service
+            android:name=".service.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
